@@ -224,6 +224,11 @@ $default_file_to_view = -1;
 # to delete topics.
 @topic_states = ('Open', 'Closed', 'Committed', 'Obsoleted', 'Deleted');
 
+# Which states (in topic_states, above) represent a 'readonly' state.
+# If a topic is in a readonly state, then certain activities are disabled, such
+# as adding new comments, editing the metrics of existing comments, etc.
+@readonly_states = ('Closed', 'Committed', 'Obsoleted', 'Deleted');
+
 # Indicate if topics can be listed/searched.  Turning this to false can be
 # useful for "anonymous" installations of codestriker.
 $allow_searchlist = 1;
