@@ -153,7 +153,7 @@ sub process($$$) {
     $vars->{'metrics'} = \@metrics;
 
     # Store the topic status     
-    $vars->{'topic_status'} = $topic->{topic_state};     
+    $vars->{'default_state'} = $topic->{topic_state};     
     $vars->{'topic_states'} = \@Codestriker::topic_states; 
 
     # Send the data to the template for rendering.
