@@ -101,7 +101,6 @@ with
 </TABLE>
 
 <P>
-
 <TABLE CELLPADDING="1" CELLSPACING="3" BORDER="0" WIDTH="100%">
 
 [% last_fileline = -999 %]
@@ -124,7 +123,7 @@ with
 	    [% END %]
 
 	    [%# Check to see if the topic is open or not #%]
-	    [% IF topic_states.0 == topic_status %]
+            [% IF topic_readonly == 0 %]
 	    | <A NAME="[% comment.anchor %]" HREF="[% comment.edit_url %]">Add comment</A>
 	    [% END %]
 	</TD>
@@ -138,8 +137,8 @@ with
 	[% metric_name %]:
    	<SELECT NAME="comment_state_metric|[% metric_name %]|[%comment.filenumber %]|[% comment.fileline %]|[% comment.filenew %]|[% comment.version %]"
 
-	[%# Check to see if the topic is open or not #%]
-	[% IF topic_states.0 != topic_status %]
+	[%# Check to see if the topic is readonly or not #%]
+        [% IF topic_readonly != 0 %]
 		disabled
 	[% END %]
 	>
@@ -188,7 +187,7 @@ with
 </TABLE>
 
 [%# Check to see if the topic is open or not #%]
-[% IF topic_states.0 == topic_status %]
+[% IF topic_readonly == 0 %]
 <P>
 <INPUT TYPE="submit" NAME="button" VALUE="Update">
 [% END %]
